// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input does not match the pattern 1`] = `
<div>
  <input />
  <div>
    Hi does not match the pattern /abc/i. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be valid if input is empty 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be valid if input matches the pattern 1`] = `
<div>
  <input />
  <div />
</div>
`;
